Fixed jump to section positioning

--- a/src/components/AppContainer.less
+++ b/src/components/AppContainer.less
@@ -30,6 +30,10 @@ p {
   padding: 8px 0;
 }
 
+.hp-content-paragraph-full-width {
+  width: 100%;
+}
+
 a, a:hover, a:active, a:visited {
   color: @accentColour;
 }
